[project]
name = "intelpython-numpy-numba-dpnp-knn"
version = "0.1.0"
description = "This sample shows how to achieve the same accuracy of the k-NN model classification while using numpy, numba and dpnp."
authors = [
    {name = "Copyright © 2020 Intel Corporation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dpctl>=0.18.3",
    "dpnp>=0.16.3",
    "modin[all]>=0.32.0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "scikit-learn-intelex>=2025.0.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
url = "https://software.repos.intel.com/python/pypi"
