[project]
name = "intelpython-xgboost-performance"
version = "0.1.0"
description = "This sample code illustrates how to analyze the performance benefit from using Intel training optimizations upstreamed by Intel to latest XGBoost compared to un-optimized XGBoost 0.81 "
authors = [
    {name = "Copyright © 2020 Intel Corporation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplot>=0.1.9",
    "notebook>=7.3.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost==0.82",
]

[[tool.uv.index]]
url = "https://software.repos.intel.com/python/pypi"
