[project]
name = "intelpython-xgboost-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplot>=0.1.9",
    "notebook>=7.3.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost==0.82",
]
