[project]
name = "intelpython-daal4py-distributedlinearregression"
version = "0.1.0"
description = "This sample code illustrates how to train and predict with a Distributed Linear Regression model with the Intel® Distribution of Python using the Python API package Daal4py powered by Intel® oneDAL"
authors = [
    {name = "Copyright © 2020 Intel Corporation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daal4py>=2024.7.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

