[project]
name = "inteltensorflow-enabling-auto-mixed-precision-for-transferlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "neural-compressor==2.4.1",
    "notebook>=7.3.2",
    "numpy==1.26.4",
    "pillow>=11.1.0",
    "py-cpuinfo>=9.0.0",
    "requests>=2.32.3",
    "tensorflow-hub==0.16.0",
]
